# probe-rs-issue-reproduce

./: .gitignore  Cargo.toml  launch.sh  memory.x
.cargo/: config.toml
src/: main.rs
